--- a/src/main/resources/assets/abilityevolve/lang/en_us.json
+++ b/src/main/resources/assets/abilityevolve/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "skill.graziery": "Graziery",
   "skill.mining": "Mining",
   "skill.gathering": "Gathering",
   "skill.attack": "Attack",
@@ -7,13 +8,14 @@
   "skill.farming": "Farming",
   "skill.agility": "Agility",
   "skill.magic": "Magic",
+  "skill.shooting": "Shooting",
   "container.skills": "Skills",
   "overlay.message.use": "You can't use this item yet!",
   "overlay.message.craft": "You can't craft this item yet!",
   "overlay.message.attack": "You can't attack this entity yet!",
   "tooltip.requirements": "Skill Requirements",
   "key.skills": "Open Skills",
-  "key.reskillable.category": "Reskillable",
-  "key.rereskillable.open_skills": "Open Skills",
-  "key.categories.rereskillable": "Rereskillable"
+  "key.abilityevolve.category": "AbilityEvolve",
+  "key.abilityevolve.open_skills": "Open Skills",
+  "key.categories.abilityevolve": "AbilityEvolve"
 }
