--- a/src/main/resources/assets/abilityevolve/lang/en_us.json
+++ b/src/main/resources/assets/abilityevolve/lang/en_us.json
@@ -14,8 +14,8 @@
   "overlay.message.craft": "You can't craft this item yet!",
   "overlay.message.attack": "You can't attack this entity yet!",
   "tooltip.requirements": "Skill Requirements",
-  "key.skills": "Open Skills",
+  "key.skills": "Open SkillScreen",
   "key.abilityevolve.category": "AbilityEvolve",
-  "key.abilityevolve.open_skills": "Open Skills",
+  "key.abilityevolve.open_skills": "Open SkillScreen",
   "key.categories.abilityevolve": "AbilityEvolve"
 }
