Energetic, Harvest added.

--- a/src/main/resources/assets/abilityevolve/lang/en_us.json
+++ b/src/main/resources/assets/abilityevolve/lang/en_us.json
@@ -18,5 +18,6 @@
   "key.abilityevolve.category": "AbilityEvolve",
   "key.abilityevolve.open_skills": "Open SkillScreen",
   "key.categories.abilityevolve": "AbilityEvolve",
-  "message.transmutation.need_xp": "You need Xp to transform."
+  "message.transmutation.need_xp": "You need Xp to transform.",
+  "energetic.hud": "Requirement: %s"
 }
